plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.1'
	id 'io.spring.dependency-management' version '1.1.4'
}

jar {
	enabled = false
}

group = 'com.ssafy'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}


repositories {
	mavenCentral()
}

dependencies {
//=========================== chat practice =======================
	implementation 'org.webjars:sockjs-client:1.1.2'
	implementation 'org.webjars:stomp-websocket:2.3.3-1'
	implementation 'org.webjars.bower:jquery:3.3.1'
	implementation 'org.webjars:webjars-locator:0.30'

//==================================================
	// https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.15.2'


	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'

	// jwt
	implementation group: 'io.jsonwebtoken', name: 'jjwt-api',version:'0.11.2'
	implementation group: 'io.jsonwebtoken', name: 'jjwt-impl',version:'0.11.2'
	implementation group: 'io.jsonwebtoken', name: 'jjwt-jackson',version:'0.11.2'

	// openvidu
	implementation group: 'io.openvidu', name: 'openvidu-java-client', version: '2.29.0'

//	implementation("io.openvidu:openvidu-java-client:2.29.0")

	implementation 'org.json:json:20230618'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
	testImplementation 'org.springframework.security:spring-security-test'

	// email
	implementation 'jakarta.mail:jakarta.mail-api:1.6.7'
	implementation 'net.nurigo:sdk:4.2.7'
	implementation 'com.google.firebase:firebase-admin:9.2.0'
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.register('copyApplication', Copy) {
	from 'secure-settings'
	include "*.properties"
	into 'src/main/resources'
}

processResources {
	dependsOn 'copyApplication'
}
